<resources>
    <string name="app_name">Dr. App</string>
    <string name="appname_txt">Dr. App</string>
    <string name="eng_txt">English</string>
    <string name="esp_txt">Español</string>
    <string name="info_txt">Patient information</string>
    <string name="type_txt">Book type</string>
    <string name="ques_txt">Questionnaire</string>
    <string name="fav_txt">Favorites</string>
    <string name="scan_txt">Ready to scan</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="prof_txt">Profile</string>
    <string name="questions_txt">Questions</string>
    <string name="disorders_txt">Known disorders</string>
    <string name="add_new_txt"> + Add new Profile</string>
    <string name="your_info_txt">Patient information</string>
    <string name="fname_txt">First name:</string>
    <string name="mname_txt">Middle initial:</string>
    <string name="lname_txt">Last name:</string>
    <string name="dob_txt">Date of birth:</string>
    <string name="sex_txt">Sex:</string>
    <string name="male_txt">Male</string>
    <string name="female_txt">Female</string>
    <string name="state_txt">State:</string>
    <string name="city_txt">City:</string>
    <string name="connection_problem">Connection Problem</string>
    <string name="strOk">OK</string>
    <string name="netconnection">Please check your internet connection</string>
    <string name="strLoading">Loading &#8230;</string>
    <string-array name="statename">
        <item></item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string name="sp_info_txt">Spouse info</string>
    <string name="iswant_txt">Is the book you want in the library?</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>
    <string name="typeobook_txt">What type of book is it?</string>
    <string-array name="booktype">
        <item>Fiction</item>
        <item>Non-fiction</item>
        <item>Documentary</item>
        <item>Other</item>
    </string-array>
    <string-array name="energy">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="primary_txt">Primary item</string>
    <string name="secondary_txt">Secondary item</string>
    <string name="magzwant_txt">Is there a magazine you want?</string>
    <string name="magz_name_txt">Name of magazine:</string>
    <string name="refferd_txt">Who referred you to this library?</string>
    <string name="name_txt">Name</string>
    <string name="rel_txt">Relationship to you</string>
    <string name="phone_txt">Phone</string>
    <string name="question_txt">Question</string>
    <string name="last_visit_txt">When was your last visit to the library (MMDDYYYY)</string>
    <string name="lib_name_txt">Name of library:</string>
    <string name="hist_txt">History</string>
    <string name="prev_borrow_txt">List of books previously borrowed from the library:</string>
    <string name="inter_txt">International</string>
    <string name="child_txt">Children\'s</string>
    <string name="self_txt">Self Help</string>
    <string name="more_book_txt">Which types of books would you like to see more of at the library?</string>
    <string name="gen_txt">General</string>
    <string name="sci_txt">Science fiction</string>
    <string name="sat_txt">Satire</string>
    <string name="drama_txt">Drama</string>
    <string name="roman_txt">Romance</string>
    <string name="myst_txt">Mystery</string>
    <string name="child1_txt">Children\'s:</string>
    <string name="comd_txt">Comedy</string>
    <string name="comc_txt">Comics</string>
    <string name="fant_txt">Fantasy</string>
    <string name="sleep_txt">Sleep/Energy:</string>
    <string name="energy_txt">What is your energy level from 1&#8211;10? (1&#8211;low, 10&#8211;high)</string>
    <string name="hrs_txt">How many hours do you sleep per night?</string>
    <string name="want_rest_txt">Do you wake rested after reading?</string>
    <string name="style_txt">Lifestyle</string>
    <string name="issomke_txt">Do you smoke? Yes/No/Past</string>
    <string name="past_txt">Past</string>
    <string name="isalch_txt">Do you consume alcohol/beer? Yes/No/Past</string>
    <string name="times_txt">How many days per week?</string>
    <string name="delete_msg">Profile delete?</string>
    <string name="age_txt">Age: </string>
    <string name="save_txt">Last Saved: </string>
    <string name="want_save_txt">Want to save profile?</string>
    <string name="loading_txt">Loading&#8230;</string>
    <string name="patinfo_txt">Patient information</string>
    <string name="insur_txt">Insurance information</string>
    <string name="search_txt">Search</string>
    <string name="symp_txt">Symptoms</string>
    <string name="yourinsur_txt">Your primary insurance</string>
    <string name="yoursecinsur_txt">Your secondary insurance</string>
    <string name="primary_ins_txt">Primary insurance</string>
    <string name="second_ins_txt">Secondary insurance</string>
    <string name="height_txt">Height:</string>
    <string name="feet_txt">Feet</string>
    <string name="inches_txt">Inches</string>
    <string name="weight_txt">Weight:</string>
    <string name="maritalstatus_txt">Marital status:</string>
    <string name="streetaddress_txt">Street address:</string>
    <string name="apartmentnumber_txt">Apartment number:</string>
    <string name="zipcode_txt">Zip code:</string>
    <string name="homephone_txt">Home phone:</string>
    <string name="businessphone_txt">Business phone:</string>
    <string name="mobilephone_txt">Mobile phone:</string>
    <string name="emailaddress_txt">Email address:</string>
    <string name="occupation_txt">Occupation:</string>
    <string name="ssn_txt">Social Security number:</string>
    <string name="gfname_txt">First name:</string>
    <string name="gmname_txt">Middle name:</string>
    <string name="glname_txt">Last name:</string>
    <string name="gdob_txt">Date Of birth:</string>
    <string name="gssn_txt">Social Security number:</string>
    <string name="gdayphone_txt">Daytime phone number:</string>
    <string name="gaddress_txt">Street address:</string>
    <string name="gaptnum_txt">Apartment number:</string>
    <string name="gcity_txt">City:</string>
    <string name="gstate_txt">State:</string>
    <string-array name="gstatename">
        <item></item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string-array name="policyhempstatename">
        <item></item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string name="gzipcode_txt">Zip code:</string>
    <string name="medins_txt">Medical insurance:</string>
    <string name="patientrelat_txt">Patient relationship to insured:</string>
    <string name="policyhname_txt">Policy holder\'s full name:</string>
    <string name="policyhdob_txt">Policy holder\'s DOB:</string>
    <string name="policyhssn_txt">Policy holder\'s Social Security number:</string>
    <string name="policyhadd_txt">Policy holder\'s address:</string>
    <string name="policythruemp_txt">Is policy through an employer?:</string>
    <string name="policyhemployer_txt">Policy holder\'s name of employer:</string>
    <string name="policyhempaddress_txt">Policy holder\'s employer address:</string>
    <string name="policyhempcity_txt">Policy holder\'s employer city:</string>
    <string name="policyhempstate_txt">Policy holder\'s employer state:</string>
    <string name="secmedins_txt">Do you have secondary medical insurance:</string>
    <string name="secinsname_txt">Secondary insurance name:</string>
    <string name="secpolnum_txt">Secondary policy number:</string>
    <string name="mother_txt">Mother:</string>
    <string name="father_txt">Father:</string>
    <string name="secgroupnum_txt">Secondary group number:</string>
    <string name="secauthnum_txt">Secondary authorization number:</string>
    <string name="secinsadd_txt">Secondary insurance address:</string>
    <string name="secinsphone_txt">Secondary insurance phone number:</string>
    <string name="secrelationship_txt">Patient relationship to insured:</string>
    <string name="looking_for">I\'m looking for a</string>
    <string name="strNear">Near</string>
    <string name="strBrowse">Or browse all</string>
    <string name="strSearch">Search</string>
</resources>