<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <com.app.doc.util.RobotoTextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search_txt"
            android:textColor="@android:color/black"
            android:textSize="20sp"  />

        <com.app.doc.util.RobotoTextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/looking_for"
            android:textColor="@android:color/white" />

        <Spinner
            android:id="@+id/speciality_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <com.app.doc.util.RobotoTextView
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strNear"
            android:textColor="@android:color/white" />

        <Spinner
            android:id="@+id/city_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <com.app.doc.util.RobotoTextView
                android:id="@+id/txtBrowseAll"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/strBrowse"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/curve_btn_bg"
                android:padding="10dp"
                android:text="@string/strSearch" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>