<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/appname_txt"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/eng_btn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_home_theme"
            android:gravity="center"
            android:text="@string/eng_txt"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/esp_btn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/button_home_theme"
            android:gravity="center"
            android:text="@string/esp_txt"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>